point to games_services_platform_interface

--- a/games_services/pubspec.yaml
+++ b/games_services/pubspec.yaml
@@ -12,7 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  games_services_platform_interface: ^1.0.5
+  #  games_services_platform_interface: ^1.0.5
+  games_services_platform_interface:
+    path: ../games_services_platform_interface/
 
 dev_dependencies:
   flutter_test:
